# lf-workshop

./: .gitignore  .gitpod-old.yml  .gitpod.Dockerfile  .gitpod.yml  README.md  jdk_image.Dockerfile  lf_image.Dockerfile  lf_openjdk.Dockerfile  testImage.Dockerfile
.devcontainer/: Dockerfile  devcontainer.json  devcontainerdocker.json
.devcontainer/containerized/: Dockerfile  devcontainer.json
.scripts/: setup.bash
artifacts/: HelloWorld  HelloWorld.c
src/: Composition.lf  CompositionFinal.lf  Deadline.lf  HelloLFCpp.lf  HelloLFFinal.lf  HelloLFPy.lf  HelloWorld.lf  HelloWorldFederated.lf  Imports.lf  Logical.lf  Modals.lf  ModalsFinal.lf  PhyLogActions.lf  PhyLogConnections.lf  PhyLogTimes.lf  SimpleDeadline.lf
src-gen/HelloWorld/: CMakeLists.txt  CompileDefinitions.txt  Dockerfile  HelloWorld.c  docker-compose.yml
src/DoorLock/: DoorLockModel.lf  UserInputTest.lf
